--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.4",
+    "@mui/x-date-pickers": "^6.19.6",
     "axios": "^1.6.7",
     "i18next": "^23.9.0",
     "i18next-browser-languagedetector": "^7.2.0",
